// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rich text component should render an iframe 1`] = `
<DocumentFragment>
  <div
    class="container flex tl items-start justify-start t-body c-on-base"
  >
    <div>
      <p
        class="lh-copy paragraph"
      >
        <span
          class="b strong"
        >
          <iframe
            frameborder="0"
            height="100%"
            src="https://invictastores.typeform.com/to/KmycOT?typeform-embed=embed-widget&embed-hide-footer=true&embed-hide-headers=true&embed-opacity=50&typeform-embed-id=d0pe3"
            style="border: 0px;"
            width="100%"
          />
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Rich text component should render and sanitize malicious javascript 1`] = `
<DocumentFragment>
  <div
    class="container flex tl items-start justify-start t-body c-on-base"
  >
    <div>
      <p
        class="lh-copy paragraph"
      >
        <a>
          HEHEHE
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Rich text component should render and sanitize malicious javascript 2`] = `
<DocumentFragment>
  <div
    class="container flex tl items-start justify-start t-body c-on-base"
  >
    <div>
      &lt;DIV STYLE="background-image: url(&#1;javascript:alert('XSS'))"&gt;
    </div>
  </div>
</DocumentFragment>
`;

exports[`Rich text component should render and sanitize malicious text 1`] = `
<DocumentFragment>
  <div
    class="container flex tl items-start justify-start t-body c-on-base"
  >
    <div>
      <p
        class="lh-copy paragraph"
      >
        Hi everyone! This is 
        <span
          class="b strong"
        >
          how
        </span>
         you do XSS 
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Rich text component should render and sanitize malicious text 2`] = `
<DocumentFragment>
  <div
    class="container flex tl items-start justify-start t-body c-on-base"
  >
    <div>
      <p
        class="lh-copy paragraph"
      >
        <a
          class="link"
        >
          some text
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Rich text component should render link with title 1`] = `
<DocumentFragment>
  <div
    class="container flex tl items-start justify-start t-body c-on-base"
  >
    <div>
      <p
        class="lh-copy paragraph"
      >
        <a
          class="link"
          href="https://www.google.com"
          title="Google's Homepage"
        >
          I'm an inline-style link with title
        </a>
        <br />
        <span
          class="b strong"
        >
          Bollllddd
        </span>
        <br />
        <span
          class="i italic"
        >
          this is talic
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Rich text component should render with bold 1`] = `
<DocumentFragment>
  <div
    class="container flex tl items-start justify-start t-body c-on-base"
  >
    <div>
      <p
        class="lh-copy paragraph"
      >
        <span
          class="b strong"
        >
          be bold
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Rich text component should render with image 1`] = `
<DocumentFragment>
  <div
    class="container flex tl items-start justify-start t-body c-on-base"
  >
    <div>
      <p
        class="lh-copy paragraph"
      >
        Inline-style:
        <br />
                  
        <img
          alt="alt text"
          class="image"
          src="https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png"
          title="Logo Title Text 1"
        />
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Rich text component should render with image block class props 1`] = `
<DocumentFragment>
  <div
    class="container container--home flex tl items-start justify-start t-body c-on-base"
  >
    <div>
      <p
        class="lh-copy paragraph"
      >
        <a
          class="link"
          href="https://www.google.com"
          title="Google's Homepage"
        >
          I'm an inline-style link with title
        </a>
        <br />
        <span
          class="b strong"
        >
          Bollllddd
        </span>
        <br />
        <span
          class="i italic"
        >
          this is talic
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Rich text component should render with paragraph 1`] = `
<DocumentFragment>
  <div
    class="container flex tl items-start justify-start t-body c-on-base"
  >
    <div>
      <p
        class="lh-copy paragraph"
      >
        IAM BOLD
      </p>
    </div>
  </div>
</DocumentFragment>
`;
